[package]
name = "snake_embedded"
version = "0.1.0"
edition = "2021"
authors = ["PixmaNts <maxime@maxime-pointet.fr>"]
description = "A classic Snake game for embedded systems using Rust and Embassy async framework on Raspberry Pi Pico with Waveshare LCD"
documentation = "https://github.com/PixmaNts/snake-pico1.4"
repository = "https://github.com/PixmaNts/snake-pico1.4.git"
homepage = "https://github.com/PixmaNts/snake-pico1.4"
license = "MIT"
keywords = ["embedded", "game", "pico", "embassy", "no-std"]
categories = ["embedded", "games", "no-std"]
readme = "README.md"
default-run = "snake_embedded"

[package.metadata]
# Metadata for embedded projects
target-chip = "RP2040"
target-board = "Raspberry Pi Pico"
display = "Waveshare LCD 1.14\""
[[bin]]
name = "snake_embedded"
path = "src/main.rs"

[[bin]]
name = "screen_test"
path = "src/screen_test.rs"

[dependencies]
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Display driver
mipidsi = "0.9.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"

# Math utilities
micromath = "2.1.0"
heapless = "0.9.1"
static_cell = "2.1.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.release]
debug = 2
